<resources>
    <string name="facebook_app_id">927954824308396</string>
    <string name="fb_login_protocol_scheme">fb927954824308396</string>
    <string name="app_name">Toshokan_Manga</string>
    <string name="title_activity_home1">Home1Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Last Updates</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="account">Account</string>
    <string name="latestviews">Latest Views</string>
    <string name="mangalist">Manga List</string>
    <string name="favorite">Favorite</string>


    <string name="home_second">Home Second</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_mangamain">MangamainActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="title_activity_manga_info_chapter">MangaInfoChapter</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_tabbed">TabbedActivity</string>
    <string name="title_activity_manga_details">MangaDetails</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
</resources>
