<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.toshokan_manga.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >

        <action
            android:id="@+id/action_HomeFragment_to_HomeSecondFragment"
            app:destination="@id/nav_home_second" />
    </fragment>
    <fragment
        android:id="@+id/nav_home_second"
        android:name="com.example.toshokan_manga.ui.home.HomeSecondFragment"
        android:label="@string/home_second"
        tools:layout="@layout/fragment_home_second">
        <action
            android:id="@+id/action_HomeSecondFragment_to_HomeFragment"
            app:destination="@id/nav_home" />

        <argument
            android:name="myArg"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/nav_favorite"
        android:name="com.example.toshokan_manga.ui.favorite.FavoriteFragment"
        android:label="@string/favorite"
        tools:layout="@layout/favorite_fragment" />

    <fragment
        android:id="@+id/nav_mangaliste"
        android:name="com.example.toshokan_manga.ui.mangalist.MangaListFragment"
        android:label="@string/mangalist"
        tools:layout="@layout/manga_list_fragment" />
    <fragment
        android:id="@+id/nav_latestviews"
        android:name="com.example.toshokan_manga.ui.latestviews.LatestViewsFragment"
        android:label="@string/latestviews"
        tools:layout="@layout/latest_views_fragment" />
    <fragment
        android:id="@+id/nav_account"
        android:name="com.example.toshokan_manga.ui.account.AccountFragment"
        android:label="@string/account"
        tools:layout="@layout/account_fragment" />

</navigation>